sumo/tests/sumo/errors/testsuite.sumo
# Tests what happens if an unknown option is passed
unknown_option

# Tests what happens if an unknown option is passed via config
unknown_config_option

# Tests what happens the first parameter is missing
missing_first_param

# the value for --begin is not a number
invalid_time

# Tests for broken routes
routes

# Tests for duplicate structures (replacing XMLIdAlreadyUsedException)
duplicates

# Tests with broken traffic lights
traffic_lights

# error handling for person related input
person
